--- a/redis/3. Redis 客户端的使用.md
+++ b/redis/3. Redis 客户端的使用.md
@@ -20,16 +20,18 @@ JedisPool jedisPool = new JedisPool(poolConfig, "127.0.0.1", 6379);
 ```java
 Jedis jedis = null;
 try {
-	// 1. 从连接池获取jedis对象
-	jedis = jedisPool.getResource();
-	// 2. 执行操作
-	jedis.set("hello", "world");
+    // 1. 从连接池获取jedis对象
+    jedis = jedisPool.getResource();
+    // 2. 执行操作
+    jedis.set("hello", "world");
 } catch (Exception e) {
-	// Exception Handler
+    // Exception Handler
 } finally {
-	if (jedis != null) {
-		// 如果使用JedisPool close操作不是关闭连接 代表归还连接池
-		jedis.close();
-	}
+    if (jedis != null) {
+        // 如果使用JedisPool close操作不是关闭连接 代表归还连接池
+        jedis.close();
+    }
 }
 ```
+
+## redis-py
