--- a/redis/3. Redis 客户端的使用.md
+++ b/redis/3. Redis 客户端的使用.md
@@ -35,3 +35,14 @@ try {
 ```
 
 ## Jedis 配置优化
+
+| 参数名 | 含义 | 默认值 | 使用建议 |
+| --- | --- | --- | --- |
+| maxTotal | 资源池最大连接数 | 8 | > 命令平均执行时间 * 业务需要QPS<br/>应用个数 * maxTotal 不能超过Redis的最大连接数 |
+| maxIdle | 资源池允许最大空闲连接数 | 8 | = maxTotal |
+| minIdle | 资源池确保最少空闲连接数 | 0 | 0 |
+| jmxEnabled | 是否开启jmx监控 可用于监控 | true | 建议开启 |
+| blockWhenExhausted | 当资源池用尽后 调用者是否要等待 只有当为true时 下面的maxWaitMillis才会生效 | true | 建议使用默认值 |
+| maxWaitMillis | 当资源池用尽后 调用者的最大等待时间(单位为毫秒) | -1:永不超时 | 不建议使用默认值 |
+| testOnBorrow | 向资源池借用连接时是否做连接有效性检测(ping) 无效连接会被移除 | false | 建议false |
+| testOnReturn | 向资源池归还连接时是否做连接有效性检测(ping) 无效连接会被移除 | false | 建议false |
