--- a/redis/4. 瑞士军刀 Redis 其他功能.md
+++ b/redis/4. 瑞士军刀 Redis 其他功能.md
@@ -75,3 +75,13 @@ M操作是原子的，pipeline是非原子的。
 1. 注意每次pipeline携带数据量。
 2. pipeline每次只能作用在一个Redis节点上。
 3. M操作和pipeline的区别。
+
+## 发布订阅
+
+**角色**
+
+- 发布者(publisher)
+- 订阅者(subscriber)
+- 频道(channel)
+
+![发布订阅](assets/4-3.png)
