--- a/redis/4. 瑞士军刀 Redis 其他功能.md
+++ b/redis/4. 瑞士军刀 Redis 其他功能.md
@@ -85,3 +85,80 @@ M操作是原子的，pipeline是非原子的。
 - 频道(channel)
 
 ![发布订阅](assets/4-3.png)
+
+## BitMap
+
+**setbit**
+
+- setbit key offset value
+- 给位图指定索引设置值
+
+```shell
+127.0.0.1:6379> setbit unique:users:2020-12-02 0 1
+(integer) 0
+127.0.0.1:6379> setbit unique:users:2020-12-02 5 1
+(integer) 0
+127.0.0.1:6379> setbit unique:users:2020-12-02 11 1
+(integer) 0
+127.0.0.1:6379> setbit unique:users:2020-12-02 15 1
+(integer) 0
+127.0.0.1:6379> setbit unique:users:2020-12-02 19 1
+(integer) 0
+```
+
+![setbit](assets/4-4.png)
+
+**getbit**
+
+- getbit key offset
+- 获取位图指定索引的值
+
+```shell
+127.0.0.1:6379> getbit unique:users:2020-12-02 8
+(integer) 0
+127.0.0.1:6379> getbit unique:users:2020-12-02 19
+(integer) 1
+```
+
+**bitcount**
+
+- bitcount key [start end]
+- 获取位图指定范围[start ~ end]位值为1的个数
+
+```shell
+127.0.0.1:6379> bitcount unique:users:2020-12-02
+(integer) 5
+127.0.0.1:6379> bitcount unique:users:2020-12-02 1 3
+(integer) 3
+```
+
+**bitop**
+
+- bitop op destkey key [key ...]
+- 做多个BitMap的and(交集)、or(并集)、not(非)、xor(异或)操作并将结果保存在destkey中
+
+```shell
+# 求两个位图的并集
+bitop and unique-result unique-1 unique-2
+```
+
+**bitpos**
+
+- bitpos key targetBit [start end]
+- 计算位图指定范围[start ~ end]第一个偏移量对应的值等于targetBit的位置
+
+### 独立用户统计
+
+- 使用set和bitmap
+- 1亿用户 每天5千万独立访问
+
+| 数据类型 | 每个userId占用空间 | 需要存储的用户量 | 全部内存量 |
+| --- | --- | --- | --- |
+| set | 32位 | 50,000,000 | 32 * 50,000,000 = 200MB |
+| bitmap | 1位 | 100,000,000 | 1 * 100,000,000 = 12.5MB |
+
+**使用经验**
+
+1. type = string，最大512MB。
+2. 注意setbit时的偏移量，可能有较大耗时。
+3. 位图不是绝对好。
