--- a/redis/4. 瑞士军刀 Redis 其他功能.md
+++ b/redis/4. 瑞士军刀 Redis 其他功能.md
@@ -162,3 +162,54 @@ bitop and unique-result unique-1 unique-2
 1. type = string，最大512MB。
 2. 注意setbit时的偏移量，可能有较大耗时。
 3. 位图不是绝对好。
+
+## HyperLogLog
+
+1. 基于HyperLogLog算法：使用极小空间完成独立数量统计。
+2. 本质还是字符串。
+
+**pfadd**
+
+- pfadd key element [element ...]
+- 向hyperloglog添加元素
+
+**pfcount**
+
+- pfcount key [key ...]
+- 计算hyperloglog的独立个数
+
+**pfmerge**
+
+- pfmerge destkey sourcekey [sourcekey ...]
+- 合并多个hyperloglog
+
+```shell
+127.0.0.1:6379> pfadd 2020_12_02:unique:ids uuid-1 uuid-2 uuid-3 uuid-4
+(integer) 1
+127.0.0.1:6379> pfcount 2020_12_02:unique:ids
+(integer) 4
+127.0.0.1:6379> pfadd 2020_12_02:unique:ids uuid-1 uuid-2 uuid-3 uuid-90
+(integer) 1
+127.0.0.1:6379> pfcount 2020_12_02:unique:ids
+(integer) 5
+```
+
+```shell
+127.0.0.1:6379> pfadd 2020_11_11:unique:ids uuid-1 uuid-2 uuid-3 uuid-4
+(integer) 1
+127.0.0.1:6379> pfcount 2020_11_11:unique:ids
+(integer) 4
+127.0.0.1:6379> pfadd 2020_11_12:unique:ids uuid-5 uuid-6 uuid-7 uuid-8
+(integer) 1
+127.0.0.1:6379> pfcount 2020_11_12:unique:ids
+(integer) 4
+127.0.0.1:6379> pfmerge 2020_11:unique:ids 2020_11_11:unique:ids 2020_11_12:unique:ids
+OK
+127.0.0.1:6379> pfcount 2020_11:unique:ids
+(integer) 8
+```
+
+**使用经验**
+
+1. 是否能容忍错误？(错误率：0.81%)
+2. 是否需要单条数据？
