--- a/redis/4. 瑞士军刀 Redis 其他功能.md
+++ b/redis/4. 瑞士军刀 Redis 其他功能.md
@@ -213,3 +213,28 @@ OK
 
 1. 是否能容忍错误？(错误率：0.81%)
 2. 是否需要单条数据？
+
+## GEO
+
+- GEO(地理信息定位)
+- 存储经纬度，计算两地距离，范围计算等
+
+**geoadd**
+
+- geo key longitude latitude member [longitude latitude member ...]
+- 增加地理位置信息
+
+**geopos**
+
+- geopos key member [member ...]
+- 获取地理位置信息
+
+**geodist**
+
+- geodist key member1 member2 [unit]
+- 获取两个地理位置的距离
+- unit: m(米)、km(千米)、mi(英里)、ft(尺)
+
+**georadius**
+
+- 获取指定位置范围内的地理位置信息集合
