--- a/redis/2. API 的理解和使用.md
+++ b/redis/2. API 的理解和使用.md
@@ -306,7 +306,7 @@ OK
 
 ## hash
 
-![hash](assets/2.1.png)
+![hash](assets/2-1.png)
 
 | 命令 | 描述 | 时间复杂度 |
 | --- | --- | --- |
@@ -459,7 +459,7 @@ sdiff/sinter/sunion store destkey
 
 根据分数进行排序。
 
-![zset](assets/2.2.png)
+![zset](assets/2-2.png)
 
 | 命令 | 描述 | 时间复杂度 |
 | --- | --- | --- |
