--- a/redis/5. Redis 持久化的取舍和选择.md
+++ b/redis/5. Redis 持久化的取舍和选择.md
@@ -38,3 +38,9 @@ Redis所有数据保持在内存中，对数据的更新将异步地保存到磁
 | 复杂度 | O(n) | O(n) |
 | 优点 | 不会消耗额外内存 | 不阻塞客户端命令 |
 | 缺点 | 阻塞客户端命令 | 需要fork，消耗内存 |
+
+**其他触发机制**
+
+1. 全量复制
+2. debug reload
+3. shutdown
