--- a/redis/5. Redis 持久化的取舍和选择.md
+++ b/redis/5. Redis 持久化的取舍和选择.md
@@ -44,3 +44,11 @@ Redis所有数据保持在内存中，对数据的更新将异步地保存到磁
 1. 全量复制
 2. debug reload
 3. shutdown
+
+**总结**
+
+1. RDB是Redis内存到硬盘的快照，用于持久化。
+2. save通常会阻塞Redis。
+3. bgsave不会阻塞Redis，但是会fork新进程。
+4. save自动配置满足任一就会被执行。
+5. 有些触发机制不容忽视。
