--- a/redis/5. Redis 持久化的取舍和选择.md
+++ b/redis/5. Redis 持久化的取舍和选择.md
@@ -52,3 +52,43 @@ Redis所有数据保持在内存中，对数据的更新将异步地保存到磁
 3. bgsave不会阻塞Redis，但是会fork新进程。
 4. save自动配置满足任一就会被执行。
 5. 有些触发机制不容忽视。
+
+## AOF
+
+### RDB有什么问题
+
+**耗时、耗性能**
+
+![RDB问题](assets/5-4.png)
+
+- O(n)数据：耗时
+- fork()：消耗内存，copy-on-write策略
+- Disk I/O：IO性能
+
+**不可控、丢失数据**
+
+| 时间戳 | save |
+| --- | --- |
+| T1 | 执行多个写命令 |
+| T2 | 满足RDB自动创建的条件 |
+| T3 | 再次执行多个写命令 |
+| T4 | 宕机 |
+
+### 什么是AOF
+
+![AOF运行原理-创建](assets/5-5.png)
+
+![AOF运行原理-恢复](assets/5-6.png)
+
+### AOF的三种策略
+
+![always](assets/5-7.png)
+
+![everysec](assets/5-8.png)
+
+![no](assets/5-9.png)
+
+| 命令 | always | everysec | no |
+| --- | --- | --- | --- |
+| 优点 | 不丢失数据 | 每秒一次fsync | 不用管 |
+| 缺点 | IO开销大，一般的Sata盘只有几百TPS | 丢1秒数据 | 不可控 |
