--- a/redis/8. Redis Sentinel.md
+++ b/redis/8. Redis Sentinel.md
@@ -1,1 +1,28 @@
 # Redis Sentinel
+
+## 主从复制问题
+
+- 手动故障转移
+- 写能力和存储能力受限
+
+## Redis Sentinel架构
+
+- 客户端从Sentinel获取Redis信息
+
+![Redis Sentinel](assets/8-1.png)
+
+**故障转移**
+
+1. 多个Sentinel发现并确认master有问题。
+2. 选举出一个Sentinel作为领导。
+3. 选出一个slave作为master。
+4. 同时其余slave成为新的master的slave。
+5. 同时客户端主从变化。
+6. 等待老的master复活成为新master的slave。
+
+![Redis Sentinel](assets/8-2.png)
+
+- Redis Sentinel可以监控多套master和slave
+- 使用master-name进行区分
+
+![Redis Sentinel架构](assets/8-3.png)
