--- a/redis/8. Redis Sentinel.md
+++ b/redis/8. Redis Sentinel.md
@@ -26,3 +26,13 @@
 - 使用master-name进行区分
 
 ![Redis Sentinel架构](assets/8-3.png)
+
+## 基本原理
+
+![基本原理](assets/8-4.png)
+
+![基本原理](assets/8-5.png)
+
+![基本原理](assets/8-6.png)
+
+![基本原理](assets/8-7.png)
