--- a/redis/8. Redis Sentinel.md
+++ b/redis/8. Redis Sentinel.md
@@ -36,3 +36,19 @@
 ![基本原理](assets/8-6.png)
 
 ![基本原理](assets/8-7.png)
+
+## Redis Sentinel内部原理
+
+**每10秒每个Sentinel对master和slave执行info**
+
+- 发现slave节点
+- 确认主从关系
+
+**每2秒每个Sentinel通过master节点的channel交换信息**
+
+- 通过__sentinel__:hello频道交互
+- 交互对节点的“看法”和自身信息
+
+**每1秒每个Sentinel对其他Sentinel和Redis执行ping**
+
+- 心跳检测，失败判定依据
