--- a/redis/8. Redis Sentinel.md
+++ b/redis/8. Redis Sentinel.md
@@ -52,3 +52,28 @@
 **每1秒每个Sentinel对其他Sentinel和Redis执行ping**
 
 - 心跳检测，失败判定依据
+
+## 主观下线和客观下线
+
+- 主观下线：每个Sentinel节点对Redis节点失败的“偏见”
+- 客观下线：所有Sentinel节点对Redis节点失败“达成共识”(超过quorum个同意)
+
+## 领导者选举
+
+1. 每个做主观下线的Sentinel节点向其他Sentinel节点发送命令，要求将它设置为领导者。
+2. 收到命令的Sentinel节点如果没有同意通过其他Sentinel节点发送的命令，那么将同意该请求，否则拒绝。
+3. 如果该Sentinel节点发现自己的票数已经超过Sentinel结合半数且超过quorum，那么它将成为领导者。
+4. 如果此过程有多个Sentinel节点成为了领导者，那么将等待一段时间重新进行选举。
+
+## 故障转移
+
+1. 从slave节点中选出一个“合适的”节点作为新的master节点。
+2. 对上面的slave节点执行slaveof no one命令让其成为master节点。
+3. 向剩余的slave节点发送命令，让它们成为新master节点的slave节点，复制规则和parallel-syncs参数有关。
+4. 更新对原来master节点配置为slave，并保持着对其“关注”，当其恢复后命令它去复制新的master节点。
+
+**选择“合适”的slave节点**
+
+1. 选择slave-priority(slave节点优先级)最高的slave节点，如果存在则返回，不存在则继续。
+2. 选择复制偏移量最大的slave节点(复制的最完整)，如果存在则返回，不存在则继续。
+3. 选择runId最小的slave节点。
