--- a/redis/8. Redis Sentinel.md
+++ b/redis/8. Redis Sentinel.md
@@ -77,3 +77,7 @@
 1. 选择slave-priority(slave节点优先级)最高的slave节点，如果存在则返回，不存在则继续。
 2. 选择复制偏移量最大的slave节点(复制的最完整)，如果存在则返回，不存在则继续。
 3. 选择runId最小的slave节点。
+
+## 高可用读写分离
+
+![读写分离](assets/8-8.png)
