--- a/redis/9. 初识 Redis Cluster.md
+++ b/redis/9. 初识 Redis Cluster.md
@@ -50,3 +50,13 @@ Redis单台机器内存16到256G。
 - 预设虚拟槽：每个槽映射一个数据子集，一般比节点数大
 - 良好的哈希函数：例如CRC16
 - 服务端管理节点、槽、数据：例如Redis Cluster
+
+## 基本架构
+
+![节点](assets/9-5.png)
+
+![指派槽](assets/9-6.png)
+
+- 集群中各节点通信
+- 为节点分配槽，共计16384个槽
+- 客户端操作时需要根据key计算出数据所在槽
