--- a/redis/10. 深入 Redis Cluster.md
+++ b/redis/10. 深入 Redis Cluster.md
@@ -1,1 +1,38 @@
 # 深入 Redis Cluster
+
+## 集群伸缩原理
+
+集群伸缩就是槽和数据在节点之间的移动。
+
+![集群伸缩](assets/10-1.png)
+
+![集群伸缩](assets/10-2.png)
+
+## 扩容集群
+
+### 准备新节点
+
+- 集群模式
+- 配置和其他节点统一
+- 启动后是孤儿节点
+
+![准备新节点](assets/10-3.png)
+
+### 加入集群
+
+**作用**
+
+- 为它迁移槽和数据实现扩容
+- 作为从节点负责故障转移
+
+![加入集群](assets/10-4.png)
+
+### 迁移槽和数据
+
+**槽迁移计划**
+
+![槽迁移计划](assets/10-5.png)
+
+**迁移数据**
+
+![迁移数据](assets/10-6.png)
