--- a/redis/10. 深入 Redis Cluster.md
+++ b/redis/10. 深入 Redis Cluster.md
@@ -36,3 +36,28 @@
 **迁移数据**
 
 ![迁移数据](assets/10-6.png)
+
+## 客户端路由
+
+### moved重定向
+
+![重定向](assets/10-7.png)
+
+### ask重定向
+
+![重定向](assets/10-8.png)
+
+- moved表示槽已经确定迁移
+- ask表示槽还在迁移中
+
+### smart客户端
+
+**原理**
+
+1. 从集群中选一个可运行节点，使用cluster slots初始化槽和节点映射。
+2. 将cluster slots的结果映射到本地，为每个节点创建JedisPool。
+3. 准备执行命令。
+
+**执行命令**
+
+![客户端](assets/10-9.png)
