--- a/redis/10. 深入 Redis Cluster.md
+++ b/redis/10. 深入 Redis Cluster.md
@@ -61,3 +61,24 @@
 **执行命令**
 
 ![客户端](assets/10-9.png)
+
+## JedisCluster
+
+```java
+Set<HostAndPort> nodeList = new HashSet<HostAndPort>();
+nodeList.add(new HostAndPort(HOST1, PORT1));
+nodeList.add(new HostAndPort(HOST2, PORT2));
+nodeList.add(new HostAndPort(HOST3, PORT3));
+nodeList.add(new HostAndPort(HOST4, PORT4));
+nodeList.add(new HostAndPort(HOST5, PORT5));
+nodeList.add(new HostAndPort(HOST6, PORT6));
+JedisCluster jedisCluster = new JedisCluster(nodeList, timeout, poolConfig);
+jedisCluster.set(key, value);
+jedisCluster.get(key);
+```
+
+**使用技巧**
+
+1. 单例：内置了所有节点的连接池
+2. 无需手动借还连接池
+3. 合理设置commons-pool
