--- a/redis/10. 深入 Redis Cluster.md
+++ b/redis/10. 深入 Redis Cluster.md
@@ -82,3 +82,58 @@ jedisCluster.get(key);
 1. 单例：内置了所有节点的连接池
 2. 无需手动借还连接池
 3. 合理设置commons-pool
+
+## 批量操作怎么实现
+
+- mget、mset必须在一个槽
+
+客户端对key进行分组，分别批量执行。
+
+![批量优化](assets/10-10.png)
+
+## 故障转移
+
+### 故障发现
+
+- 通过ping/pong消息实现故障发现：不需要sentinel
+
+**主观下线**
+
+某个节点认为另一个节点不可用。
+
+![主观下线](assets/10-11.png)
+
+**客观下线**
+
+当半数以上持有槽的主节点都标记某节点主观下线。
+
+![客观下线](assets/10-12.png)
+
+**尝试客观下线**
+
+- 通知集群内所有节点标记故障节点为客观下线
+- 通知故障节点的从节点触发故障转移流程
+
+![尝试客观下线](assets/10-13.png)
+
+### 故障恢复
+
+**资格检查**
+
+- 每个从节点检查与故障主节点的断线时间。
+- 超过cluster-node-timeout * cluster-slave-validity-factor取消资格。
+- cluster-slave-validity-factor默认是10。
+
+**准备选举时间**
+
+![准备选举时间](assets/10-14.png)
+
+**选举投票**
+
+![选举投票](assets/10-15.png)
+
+**替换主节点**
+
+1. 当前从节点取消复制成为主节点。
+2. 执行clusterDelSlot撤销故障主节点分配的槽，并执行clusterAddSlot把这些槽分配给自己。
+3. 向集群广播自己的pong消息，表明已经替换了故障从节点。
