--- a/redis/10. 深入 Redis Cluster.md
+++ b/redis/10. 深入 Redis Cluster.md
@@ -137,3 +137,85 @@ jedisCluster.get(key);
 1. 当前从节点取消复制成为主节点。
 2. 执行clusterDelSlot撤销故障主节点分配的槽，并执行clusterAddSlot把这些槽分配给自己。
 3. 向集群广播自己的pong消息，表明已经替换了故障从节点。
+
+## 集群常见问题
+
+### 集群完整性
+
+- cluster-require-full-coverage默认为yes
+- 集群中16384个槽全部可用：保证集群完整性
+- 节点故障或者正在故障转移：(error)CLUSTERDOWN The cluster is down
+- 大多数业务无法容忍，cluster-require-full-coverage建议设置为no
+
+### 带宽消耗
+
+- 官方建议集群内不要超过1000个节点
+- 避免使用“大”集群：避免多业务使用一个集群，大业务可以多集群
+- cluster-node-timeout：带宽和故障转移速度的均衡
+- 尽量均匀分配到多机器上：保证高可用和带宽
+
+### Pub/Sub广播
+
+- 问题：publish在集群每个节点广播，加重带宽
+- 解决：单独“走”一套Redis Sentinel
+
+![广播](assets/10-16.png)
+
+### 数据倾斜
+
+- 节点和槽分配不均
+- 不同槽对应键值数量差异较大
+- 包含bigkey
+- 内存相关配置不一致
+
+### 请求倾斜
+
+- 热点key：重要的key或者bigkey
+- 避免bigkey
+- 热键不要使用hash_tag
+- 当一致性不高时，可以用本地缓存+MQ
+
+### 读写分离
+
+**集群模式的从节点不接受任何读写请求**
+
+- 重定向到负责槽的主节点
+- readonly命令可以读：连接级别命令
+
+**读写分离**
+
+- 存在问题：复制延迟、读取过期数据、从节点故障
+- 修复客户端：cluster slaves {nodeId}
+
+### 数据迁移
+
+**redis-trib.rb import**
+
+- 只能从单机迁移到集群
+- 不支持在线迁移：source需要停写
+- 不支持断点续传
+- 单线程迁移：影响速度
+
+**在线迁移**
+
+- 唯美会：redis-migrate-tool
+- 豌豆荚：redis-port
+
+### 集群VS单机
+
+**集群限制**
+
+- key批量操作支持有限：例如mget、mset必须在一个slot
+- key事务和lua支持有限：操作的key必须在一个节点
+- key是数据分区的最小粒度：不支持bigkey分区
+- 不支持多个数据库：集群模式下只有一个db 0
+- 复制只支持一层：不支持树形复制结构
+
+**分布式Redis不一定好**
+
+- Redis Cluster：满足容量和性能的拓展性，很多业务不需要
+- 大多数时客户端性能会降低
+- 命令无法跨节点使用：mget、keys、scan、flush、sinter等
+- Lua和事务无法跨节点使用
+- 客户端维护更复杂：SDK和应用本身消耗
+- 很多场景下Redis Sentinel已经足够好
