--- a/redis/11. 缓存设计与优化.md
+++ b/redis/11. 缓存设计与优化.md
@@ -63,3 +63,26 @@
 - 布隆过滤器拦截
 
 ![布隆过滤器拦截](assets/11-3.png)
+
+## 缓存雪崩优化
+
+- 由于cache服务承载大量请求，当cache服务异常/脱机，流量直接压向后端组件(例如DB)，造成级联故障
+
+![缓存雪崩](assets/11-4.png)
+
+**优化方案**
+
+- 保证缓存高可用性：个别节点、个别机器甚至是机房
+- 依赖隔离组件为后端限流
+- 提前演练：压力测试
+
+## 无底洞问题
+
+- 2010年，Facebook有了3000个Memcache节点
+- 发现问题："加"机器性能没能提升，反而下降
+
+**问题关键点**
+
+- 更多的机器不等于更高的性能
+- 对于批量接口(mget/mset)会遇到该问题
+- 数据增长与水平扩展需求
