--- a/redis/11. 缓存设计与优化.md
+++ b/redis/11. 缓存设计与优化.md
@@ -86,3 +86,38 @@
 - 更多的机器不等于更高的性能
 - 对于批量接口(mget/mset)会遇到该问题
 - 数据增长与水平扩展需求
+
+## 热点key重建优化
+
+- 当热点key过期时，大量请求查询到没有缓存，查询存储层并重建缓存，大量请求打到存储层
+
+![热点key重建](assets/11-5.png)
+
+**三个目标**
+
+- 减少重缓存的次数
+- 数据尽可能一致
+- 减少潜在风险
+
+**两个解决**
+
+- 互斥锁
+- 永远不过期
+
+**互斥锁**
+
+重建缓存过程中其他线程等待
+
+![互斥锁](assets/11-6.png)
+
+**永远不过期**
+
+1. 缓存层面：没有设置过期时间(没有用expire)
+2. 功能层面：为每个value添加逻辑过期时间，但发现超过逻辑过期时间后，会使用单独的线程去构建缓存
+
+![永远不过期](assets/11-7.png)
+
+| 方案 | 优点 | 缺点 |
+| --- | --- | --- |
+| 互斥锁 | 思路简单<br/>保证一致性 | 代码复杂度增加<br/>存在死锁的风险 |
+| 永远不过期 | 基本杜绝热点key重建问题 | 不保证一致性<br/>逻辑过期时间增加维护成本和内存成本 |
