--- a/redis/12. Redis 布隆过滤器.md
+++ b/redis/12. Redis 布隆过滤器.md
@@ -33,3 +33,26 @@
 
 - 肯定存在误差：恰好都命中了
 - 直观因素：m/n的比率，hash函数的个数
+
+## 本地布隆过滤器
+
+现有库：guava
+
+**问题**
+
+1. 容量受限制
+2. 多个应用存在多个布隆过滤器，构建同步复杂
+
+## Redis 布隆过滤器
+
+使用位图实现布隆过滤器
+
+![布隆过滤器](assets/12-2.png)
+
+- 速度慢：通过网络传输，比本地慢
+- 容量受限：Redis 最大字符串为 512MB、Redis 单机容量
+
+## Redis 分布式布隆过滤器
+
+- 多个布隆过滤器：二次路由
+- 基于pipeline提高效率
