--- a/redis/13. Redis 开发规范.md
+++ b/redis/13. Redis 开发规范.md
@@ -9,3 +9,13 @@
 不要包含特殊字符：空格、换行、单双引号以及其他转义字符
 
 ## 值设计
+
+### bigkey
+
+- string类型控制在10KB以内
+- hash、list、set、zset元素个数不要超过5000
+
+- 网络阻塞
+- redis阻塞
+- 集群节点数据不均衡
+- 频繁序列化：应用服务器CPU消耗
